# crewai-it-department

./: .env.server.example  .gitignore  README.md  package-lock.json  package.json
apps/frontend/: package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: status-badge.tsx
apps/frontend/lib/: runbook.ts
apps/it_department/: .env.example  README.md  pyproject.toml
apps/it_department/src/it_department/: __init__.py  artifacts.py  config.py  crew_builder.py  frontend_delivery.py  llm_factory.py  main.py  models.py  notifier.py  run_state.py  runtime_env.py  sample_data.py  telegram_bot.py
apps/it_department/src/it_department/config/: agents.yaml  tasks.yaml
apps/it_department/tests/: test_config.py  test_run_state.py
scripts/: bootstrap_ubuntu.sh  run_department.sh  start_server.sh  stop_server.sh
